fix(KONFLUX-8822): disable leader election
* The etcd defragmentation is causing the
  leader election to fail frequently,
  crashing the service

Signed-off-by: dirgim <kpavic@redhat.com>

rh-pre-commit.version: 2.2.0
rh-pre-commit.check-secrets: ENABLED

--- a/bundle/manifests/application-service.clusterserviceversion.yaml
+++ b/bundle/manifests/application-service.clusterserviceversion.yaml
@@ -286,7 +286,7 @@ spec:
               - args:
                 - --health-probe-bind-address=:8081
                 - --metrics-bind-address=127.0.0.1:8080
-                - --leader-elect
+                - --leader-elect=false
                 command:
                 - /manager
                 env:
